pulled new files 200616

--- a/course-content/03-javascript/activities/03-PizzaVariables/Unsolved/pizza-variables.html
+++ b/course-content/03-javascript/activities/03-PizzaVariables/Unsolved/pizza-variables.html
@@ -16,8 +16,9 @@
 
     // FILL IN YOUR CODE HERE
     // =============================================
-
-
+    var pizzaCount = 7;
+    var isHungry = true;
+    var pizzaCount = 5;
     // ==============================================
 
 
