--- a/course-content/03-javascript/activities/07-PromptSushi/Unsolved/prompt-sushi.html
+++ b/course-content/03-javascript/activities/07-PromptSushi/Unsolved/prompt-sushi.html
@@ -8,7 +8,20 @@
 
     <script type="text/javascript">
 
-    // Write code here!
+     var doYouLikeSushi = confirm("Do you like sushi?");
+
+      if (doYouLikeSushi) {
+        var sushiILike = prompt("What kind of sushi do you like");
+      }
+      if (doYouLikeSushi === false) {
+        var sushiIlike = "I don't like sushi";
+      }
+
+      console.log(doYouLikeSushi);
+      console.log(sushiILike);
+
+      alert(doYouLikeSushi);
+      alert(sushiILike);
 
     </script>
 
