--- a/course-content/03-javascript/activities/05-PizzaConsole/Unsolved/pizza-variables-2.html
+++ b/course-content/03-javascript/activities/05-PizzaConsole/Unsolved/pizza-variables-2.html
@@ -15,13 +15,10 @@
     var totalCost = pizzaCount * 5.00;
 
     // Instructions: Replace each of the "alert" functions below with "console.log()"
-    alert("Welcome: " + name);
-
-    alert("Pizzas cost $5 each");
-
-    alert("Your total is: $" + totalCost);
-
-    alert("Still Hungry: " + isHungry);
+    console.log("Welcome: " + name);
+    console.log("Pizzas cost $5 each");
+    console.log("Your total is: $" + totalCost);
+    console.log("Still Hungry: " + isHungry);
 
     </script>
     
